--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,16 @@
   </head>
 
   <body>
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
+    <% if show_header? %>
+      <%= render 'shared/header' %>
     <% end %>
 
+    <div id='flash' class='position-absolute top-20 end-0 me-4'>
+      <%= render 'shared/flash' %>
+    </div>
+
     <%= yield %>
+
+    <%= render 'shared/footer' %>
   </body>
 </html>
