--- a/app/views/categories/create.turbo_stream.erb
+++ b/app/views/categories/create.turbo_stream.erb
@@ -2,3 +2,4 @@
 <%= turbo_stream.replace dom_id(Category.new) do %>
   <%= render 'form', category: Category.new, name: 'Category name' %>
 <% end %>
+<%= turbo_stream.prepend 'flash', partial: 'shared/flash' %>
