--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,56 @@
-<h2>Sign up</h2>
+<div class="h-100 d-flex flex-column justify-content-center align-items-center bg-light text-dark">
+  <div class="form-signin w-25 m-auto text-center ">
+    <h2 class="h3 mb-3 fw-normal">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="input-group my-2">
+        <div class="form-floating <%= 'is-invalid' if resource.errors.include?(:name) %>">
+          <%= f.text_field :name, autofocus: true, autocomplete: "name",
+            class: "form-control #{'is-invalid' if resource.errors.include?(:name)}",
+            placeholder: 'Name' %>
+          <%= f.label :name %>
+        </div>
+        <%= render 'shared/errors', object: resource, field: :name %>
+      </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+      <div class="input-group my-2">
+        <div class="form-floating <%= 'is-invalid' if resource.errors.include?(:email) %>">
+          <%= f.email_field :email, autocomplete: "email",
+            class: "form-control #{'is-invalid' if resource.errors.include?(:email)}",
+            placeholder: 'Email' %>
+          <%= f.label :email %>
+        </div>
+        <%= render 'shared/errors', object: resource, field: :email %>
+      </div>
+
+      <div class="input-group my-2">
+        <div class="form-floating <%= 'is-invalid' if resource.errors.include?(:password) %>">
+          <%= f.password_field :password, autocomplete: "new-password",
+            class: "form-control #{'is-invalid' if resource.errors.include?(:password)}",
+            placeholder: 'Password' %>
+          <%= f.label :password,
+            "Password (#{@minimum_password_length if @minimum_password_length} characters minimum)" %>
+        </div>
+        <%= render 'shared/errors', object: resource, field: :password %>
+      </div>
+
+      <div class="input-group my-2">
+        <div class="form-floating <%= 'is-invalid' if resource.errors.include?(:password_confirmation) %>">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password",
+            class: "form-control #{'is-invalid' if resource.errors.include?(:password_confirmation)}",
+            placeholder: 'Password confirmation' %>
+          <%= f.label :password_confirmation %>
+        </div>
+        <%= render 'shared/errors', object: resource, field: :password_confirmation %>
+      </div>
+
+      <div class="actions my-2">
+        <%= f.submit "Sign up", class: 'btn btn-primary btn-lg' %>
+      </div>
+    <% end %>
+
+    <div class="actions my-2">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
