Modified Spending and Category views, flashes, Devise redirects (#10)

--- a/app/views/categories/create.turbo_stream.erb
+++ b/app/views/categories/create.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.before 'add_category', render(@category) %>
-<%= turbo_stream.replace dom_id(Category.new) do %>
-  <%= render 'form', category: Category.new, name: 'Category name' %>
+<%= turbo_stream.replace :new_category do %>
+  <%= render 'form', category: Category.new %>
 <% end %>
 <%= turbo_stream.prepend 'flash', partial: 'shared/flash' %>
