--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -6,7 +6,7 @@
         <%= value %>
       <% end %>
     <% elsif key == 'notice' %>
-      <%= tag.div id: key, class: 'alert alert-warning', role: 'notification' do %>
+      <%= tag.div id: key, class: 'alert alert-primary', role: 'notification' do %>
         <i class="bi bi-info-circle-fill me-2"></i>
         <%= value %>
       <% end %>
