--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render 'form', category: @category, name: @category.name %>
+<%= turbo_frame_tag @category do %>
+  <%= render 'form', category: @category %>
+<% end %>
