--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,1 +1,3 @@
-<%= render 'form', category: @category, name: 'Category name' %>
+<%= turbo_frame_tag @category do %>
+  <%= render 'form', category: @category %>
+<% end %>
