--- a/app/views/spendings/create.turbo_stream.erb
+++ b/app/views/spendings/create.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.prepend 'spendings', render(@spending) %>
-<%= turbo_stream.update dom_id(Spending.new) %>
+<%= turbo_stream.prepend 'spendings', render(@spending, shared: false) %>
+<%= turbo_stream.update :new_spending %>
 <%= turbo_stream.prepend 'flash', partial: 'shared/flash' %>
