--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <div class="d-flex justify-content-center align-items-center h-100">
   <div class="text-center">
-    <h1>Welcome to <b>Spendify</b> app!</h1>
+    <h1>Welcome to <b>MExTA</b>,</h1>
+    <h2>a Minimal Expenses Tracking Application!</h2>
     <p><i>Please sign in or sign up to proceed</i></p>
     <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg m-3" %>
     <%= link_to "Sign in", new_user_session_path, class: "btn btn-outline-primary btn-lg m-3" %>
